--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/answers/activity-file-answer/activityFileAnswer.component.scss
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/answers/activity-file-answer/activityFileAnswer.component.scss
@@ -49,6 +49,12 @@ $drop-block-active-color: lightyellow;
     }
 }
 
+.uploaded-file-chip {
+    .file-size {
+        margin-left: 5px;
+    }
+}
+
 .upload-btn {
     margin: 20px 0;
 }
