--- a/ddp-workspace/projects/ddp-cgc/src/app/components/login/login.component.scss
+++ b/ddp-workspace/projects/ddp-cgc/src/app/components/login/login.component.scss
@@ -8,4 +8,12 @@
   }
 }
 
+@media only screen and (max-width: 767px) {
+  .nav {
+    &-list {
+      display: flex;
+      flex-direction: column;
+    }
+  }
+}
 
