--- a/ddp-workspace/projects/ddp-cgc/src/styles/_buttons.scss
+++ b/ddp-workspace/projects/ddp-cgc/src/styles/_buttons.scss
@@ -10,6 +10,17 @@
   border: 0;
 }
 
+.SimpleButton:hover {
+  text-decoration: none;
+  color: #fff;
+}
+
+@media only screen and (max-width: 1030px) {
+  .SimpleButton {
+    font-size: 17px;
+  }
+}
+
 .button {
   display: inline-block;
 
