--- a/ddp-workspace/projects/ddp-cgc/src/app/components/header/header.component.html
+++ b/ddp-workspace/projects/ddp-cgc/src/app/components/header/header.component.html
@@ -42,7 +42,7 @@
           >
         </li>
         <li class="nav-item">
-          <app-login (isAuth)="toggleIsAuthenticated()"></app-login>
+          <app-login (isAuth)="toggleIsAuthenticated($event)"></app-login>
         </li>
       </ul>
     </div>
