--- a/ddp-workspace/projects/ddp-cgc/src/app/components/header/header.component.scss
+++ b/ddp-workspace/projects/ddp-cgc/src/app/components/header/header.component.scss
@@ -122,7 +122,7 @@
 
 @media only screen and (max-width: 767px) {
   .nav-item__button {
-    display: inline;
+    display: inline-block;
   }
 }
 
