--- a/ddp-workspace/projects/ddp-cgc/src/styles/_buttons.scss
+++ b/ddp-workspace/projects/ddp-cgc/src/styles/_buttons.scss
@@ -15,6 +15,11 @@
   color: #fff;
 }
 
+.SimpleButton:focus {
+  text-decoration: none;
+  color: #fff;
+}
+
 @media only screen and (max-width: 1030px) {
   .SimpleButton {
     font-size: 17px;
