--- a/ddp-workspace/projects/ddp-cgc/src/app/components/login/login.component.html
+++ b/ddp-workspace/projects/ddp-cgc/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <nav>
   <ul class="nav-list">
     <li *ngIf="isAuthenticated">
-      <a [routerLink]="routes.Dashboard" class="SimpleButton" translate>
+      <a [routerLink]="routes.Dashboard" routerLinkActive="nav-item__link-active" class="SimpleButton" translate>
         Common.Navigation.Dashboard
       </a>
     </li>
