--- a/ddp-workspace/projects/ddp-cgc/src/app/components/header/header.component.scss
+++ b/ddp-workspace/projects/ddp-cgc/src/app/components/header/header.component.scss
@@ -34,6 +34,8 @@
   }
   &-collapse ul {
     margin: 10px 0;
+    display: flex;
+    align-items: center;
   }
   &-background {
     margin: 0;
@@ -121,6 +123,12 @@
 }
 
 @media only screen and (max-width: 767px) {
+  .header {
+    &-collapse ul {
+      display: block;
+    }
+  }
+
   .nav-item__button {
     display: inline-block;
   }
@@ -128,8 +136,7 @@
 
 ::ng-deep {
   app-login ul li {
-    display: inline-block;
-    padding-right: 15px;
+    display: inline;
   }
 }
 
