fix menu layout

--- a/ddp-workspace/projects/ddp-cgc/src/app/components/login/login.component.scss
+++ b/ddp-workspace/projects/ddp-cgc/src/app/components/login/login.component.scss
@@ -5,8 +5,11 @@
   }
   &-item {
     padding: 0 0 0 30px;
-    &__link-active {
-      display: none;
+    &__link {
+      padding-right: 15px;
+      &_active {
+        display: none;
+      }
     }
   }
 }
