Fixed log out issue

--- a/ddp-workspace/projects/ddp-cgc/src/app/components/login/login.component.html
+++ b/ddp-workspace/projects/ddp-cgc/src/app/components/login/login.component.html
@@ -7,7 +7,7 @@
     </li>
     <li>
       <ddp-sign-in-out
-        [signOutReturnToUrl]="routes.LoginRedirect"
+        [signOutReturnToUrl]="routes.Home"
       ></ddp-sign-in-out>
     </li>
   </ul>
