Validate embedded activity before its parent activity is submitted

--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/activity-blocks/activityBlock/activityBlock.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/activity-blocks/activityBlock/activityBlock.component.html
@@ -19,6 +19,7 @@
                                              [validationRequested]="validationRequested"
                                              [studyGuid]="studyGuid"
                                              (componentBusy)="embeddedComponentBusy.emit($event)"
+                                             (validStatusChanged)="validStatusChanged.emit($event)"
                                              (deletedActivity)="onDeleteChildInstance($event)">
                 </ddp-embedded-activity-block>
             </ng-template>
