Remove unused emitter (`visibilityChanged`)

--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/answers/activity-composite-answer/activityCompositeAnswer.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/answers/activity-composite-answer/activityCompositeAnswer.component.html
@@ -14,8 +14,7 @@
                                  [block]="childBlock"
                                  [readonly]="readonly"
                                  [validationRequested]="validationRequested"
-                                 (valueChanged)="updateValue(row, column, $event)"
-                                 (visibilityChanged)="updateVisibility($event)">
+                                 (valueChanged)="updateValue(row, column, $event)">
         </ddp-activity-answer>
         </ng-container>
     </div>
