Fix messages after code-review

--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/answers/activity-file-answer/activityFileAnswer.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/answers/activity-file-answer/activityFileAnswer.component.html
@@ -5,7 +5,7 @@
         {{'SDK.FileUpload.MaxSize' | translate : { maxSize: fileMaxSize | fileSize} }}
     </div>
     <div class="file-types" *ngIf="allowedFileTypes.length">
-        {{'SDK.FileUpload.AllowedFiles' | translate : { allowedFileTypes: getAllowedTypes(allowedFileTypes)} }}
+        {{'SDK.FileUpload.AllowedFileTypes' | translate : { allowedFileTypes: getAllowedTypes(allowedFileTypes)} }}
     </div>
 </div>
 
