Return back missed attribute

--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/answers/activity-file-answer/activityFileAnswer.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/answers/activity-file-answer/activityFileAnswer.component.html
@@ -33,7 +33,7 @@
         <button *ngIf="!readonly" #uploadBtn
                 mat-raised-button color="primary"
                 class="submit-btn"
-
+                [disabled]="!fileToUpload?.isReadyToUpload"
                 (click)="submitFileUpload()">
             {{uploadedFile? ('SDK.FileUpload.ReuploadBtnText' | translate) : ('SDK.FileUpload.UploadBtnText' | translate)}}
         </button>
