fix menu layout

--- a/ddp-workspace/projects/ddp-cgc/src/app/components/header/header.component.scss
+++ b/ddp-workspace/projects/ddp-cgc/src/app/components/header/header.component.scss
@@ -20,10 +20,19 @@
   }
   &-default, &-toggle {
     border-color: #ddd;
+    margin-right: 0;
   }
   &-default &-toggle:hover, &-default &-toggle:focus {
     background-color: unset;
   }
+}
+
+.navbar::before {
+  content: normal;
+}
+
+.navbar::after {
+  content: normal;
 }
 
 .header {
@@ -42,7 +51,7 @@
     border: none;
     border-radius: 0;
     box-shadow: none;
-    padding: 20px 0;
+    padding: 30px 80px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -90,10 +99,6 @@
 }
 
 @media only screen and (max-width: 1030px) {
-  .header-background {
-    padding: 10px 0;
-  }
-
   .nav {
     &-item {
       &__link {
@@ -104,6 +109,9 @@
 }
 
 @media only screen and (max-width: 992px) {
+  .header-background {
+    padding: 25px;
+  }
   .nav-item {
     padding-left: 15px;
   }
@@ -126,11 +134,16 @@
 
     &-background {
       display: block;
+      padding: 0;
     }
 
     &-logo img {
-      margin: 7px 0 0 15px;
+      margin-top: 7px;
     }
+  }
+
+  .navbar-header {
+    padding: 25px;
   }
 
   .nav-item__button {
