--- a/ddp-workspace/projects/ddp-pancan/src/app/components/app/app.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper" (click)="scrollToStep($event)">
+<div class="wrapper">
     <app-header></app-header>
     <router-outlet></router-outlet>
     <app-footer></app-footer>
