--- a/ddp-workspace/projects/ddp-cgc/src/app/components/login/login.component.scss
+++ b/ddp-workspace/projects/ddp-cgc/src/app/components/login/login.component.scss
@@ -20,6 +20,13 @@
       display: flex;
       flex-direction: column;
     }
+    &-item {
+      padding: 0 0 0 30px;
+
+      &__link {
+        padding-right: 0;
+      }
+    }
   }
 }
 
