Customize confirm button color (in confirm dialog)

--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/confirmDialog/confirmDialog.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/confirmDialog/confirmDialog.component.html
@@ -4,7 +4,7 @@
     </span>
     <div class="confirm-dialog-buttons">
         <button mat-flat-button class="ctrl-btn confirm-btn"
-                color="warn"
+                [color]="confirmBtnColor"
                 [mat-dialog-close]="true"
                 [innerHTML]="confirmBtnText | translate">
         </button>
