--- a/ddp-workspace/projects/ddp-cgc/src/app/components/footer/footer.component.html
+++ b/ddp-workspace/projects/ddp-cgc/src/app/components/footer/footer.component.html
@@ -6,16 +6,25 @@
   </div>
   <div _ngcontent-c2="" class="col-lg-3 col-md-4 col-sm-6 col-xs-12 mt10">
       <p _ngcontent-c2="" class="footer-text">
-          <span _ngcontent-c2="" class="medium">Contact Us</span><br _ngcontent-c2="">
+          <span _ngcontent-c2="" class="medium">{{ 'Footer.Titles.ContactUs' | translate }}</span><br _ngcontent-c2="">
           <span _ngcontent-c2="" class="light">info@cancercollective.org<br>651-229-5806</span>
       </p>
   </div>
   <div _ngcontent-c2="" class="col-lg-3 col-md-4 col-sm-6 col-xs-12 mt10">
       <p _ngcontent-c2="" class="footer-text float--right">
-          <a _ngcontent-c2="" class="footer-link" [routerLink]="Route.Home">Home</a>
-          <a _ngcontent-c2="" class="footer-link" [routerLink]="Route.AboutUs">About Us</a>
-          <a _ngcontent-c2="" class="footer-link" [routerLink]="Route.LearnMore">Learn More</a>
-          <button _ngcontent-c2="" class="footer-link"><i class="fa fa-arrow-up footer-arrow"></i> Back to top</button>
+          <a _ngcontent-c2="" class="footer-link" [routerLink]="Route.Home">
+            {{ 'Footer.Links.Home' | translate }}
+          </a>
+          <a _ngcontent-c2="" class="footer-link" [routerLink]="Route.AboutUs">
+            {{ 'Footer.Links.AboutUs' | translate }}
+          </a>
+          <a _ngcontent-c2="" class="footer-link" [routerLink]="Route.LearnMore">
+            {{ 'Footer.Links.LearnMore' | translate }}
+          </a>
+          <button _ngcontent-c2="" class="footer-link">
+              <i class="fa fa-arrow-up footer-arrow"></i>
+              {{ 'Footer.Links.BackToTop' | translate }}
+          </button>
       </p>
   </div>
 </footer>
