--- a/ddp-workspace/projects/ddp-cgc/src/app/components/header/header.component.html
+++ b/ddp-workspace/projects/ddp-cgc/src/app/components/header/header.component.html
@@ -8,7 +8,9 @@
         data-toggle="collapse"
         type="button"
       >
-        <span class="sr-only">Toggle navigation</span>
+        <span class="sr-only">
+          {{ 'Header.Titles.ToggleNavigation' | translate }}
+        </span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
