A-T: Implement participant status display for proxy user

--- a/ddp-workspace/projects/ddp-atcp/src/app/components/participant-list/participant-list-item.component.scss
+++ b/ddp-workspace/projects/ddp-atcp/src/app/components/participant-list/participant-list-item.component.scss
@@ -6,13 +6,19 @@
 }
 
 .participant-expandable__name {
-  margin-right: auto;
+  width: 236px;
 
   font-weight: bold;
   opacity: 0.8;
 }
 
-.participant-expandable__status {
+.status {
+  font-weight: bold;
+  font-style: italic;
+  opacity: 0.8;
+}
+
+.participant-expandable__counter {
   display: flex;
   align-items: center;
 
@@ -20,18 +26,18 @@
   opacity: 0.6;
 
   margin-right: 1rem;
-}
 
-.participant-expandable__status::before {
-  content: '';
+  &::before {
+    content: '';
 
-  width: 8px;
-  height: 8px;
+    width: 8px;
+    height: 8px;
 
-  margin-right: 6px;
+    margin-right: 6px;
 
-  background-color: #5c7a36;
-  border-radius: 4px;
+    background-color: #5c7a36;
+    border-radius: 4px;
+  }
 }
 
 .participant-expandable__control {
