--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/answers/activity-composite-answer/activityCompositeAnswer.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/answers/activity-composite-answer/activityCompositeAnswer.component.html
@@ -8,15 +8,14 @@
     </p>
     <div [ngClass]="['ddp-answer-container', setOrientationClass(block.childOrientation)]">
         <ng-container *ngFor="let childBlock of childBlockRow; let column = index">
-            <ddp-activity-answer [ngClass]="[(childBlock.questionType == 'text'
-                                              && block.childOrientation !== 'VERTICAL') ? 'ddp-composite-text' : '',
-                                              'ddp-answer-field']"
-                                 [block]="childBlock"
-                                 [readonly]="readonly"
-                                 [validationRequested]="validationRequested"
-                                 (valueChanged)="updateValue(row, column, $event)"
-                                 (visibilityChanged)="updateVisibility($event)">
-        </ddp-activity-answer>
+            <ddp-activity-answer
+                class="ddp-answer-field"
+                [class.ddp-composite-text]="childBlock.questionType == 'text' && block.childOrientation !== 'VERTICAL'"
+                [block]="childBlock"
+                [readonly]="readonly"
+                [validationRequested]="validationRequested"
+                (valueChanged)="updateValue(row, column, $event)">
+            </ddp-activity-answer>
         </ng-container>
     </div>
 </ng-container>
