A-T: Display status for self-enrolled user

--- a/ddp-workspace/projects/ddp-atcp/src/app/components/dashboard/dashboard.component.html
+++ b/ddp-workspace/projects/ddp-atcp/src/app/components/dashboard/dashboard.component.html
@@ -11,6 +11,25 @@
   </div>
 
   <ng-template #userActivities>
+    <div class="registration-status">
+      <span class="status">
+        {{ 'EnrollmentStatus.Prefix' | translate }}
+      </span>
+
+      <ng-container *ngIf="isContactUsStatus; else simpleStatus">
+        <app-tooltip-button
+          style="margin-left: 4px; font-style: italic"
+          [message]="'EnrollmentStatus.ContactUsTooltip' | translate"
+        >
+          {{ enrollmentMessageKey | translate }}
+        </app-tooltip-button>
+      </ng-container>
+
+      <ng-template #simpleStatus>
+        <span class="status">{{ enrollmentMessageKey | translate }}</span>
+      </ng-template>
+    </div>
+
     <app-user-activities
       [activities]="activities"
       (startActivity)="goToActivity($event)"
