--- a/ddp-workspace/projects/ddp-atcp/src/app/components/dashboard/dashboard.component.scss
+++ b/ddp-workspace/projects/ddp-atcp/src/app/components/dashboard/dashboard.component.scss
@@ -10,3 +10,15 @@
     padding: 3.6rem;
   }
 }
+
+.registration-status {
+  padding: 16px 24px;
+
+  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+}
+
+.status {
+  font-weight: bold;
+  font-style: italic;
+  opacity: 0.8;
+}
