Disable the activity submit button while file upload requests are in progress.

--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/answers/activity-composite-answer/activityCompositeAnswer.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/answers/activity-composite-answer/activityCompositeAnswer.component.html
@@ -14,7 +14,8 @@
                 [block]="childBlock"
                 [readonly]="readonly"
                 [validationRequested]="validationRequested"
-                (valueChanged)="updateValue(row, column, $event)">
+                (valueChanged)="updateValue(row, column, $event)"
+                (componentBusy)="componentBusy.next($event)">
             </ddp-activity-answer>
         </ng-container>
     </div>
