Add progress bar for file uploading

--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/answers/activity-file-answer/activityFileAnswer.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/answers/activity-file-answer/activityFileAnswer.component.html
@@ -39,6 +39,7 @@
                 <mat-icon matChipRemove *ngIf="!readonly" #undoUploadBtn>cancel</mat-icon>
             </mat-chip>
         </mat-chip-list>
+        <ddp-loading *ngIf="fileToUpload" [loaded]="!isLoading" class="loading-bar"></ddp-loading>
     </div>
 </div>
 
