--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/answers/activity-file-answer/activityFileAnswer.component.scss
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/answers/activity-file-answer/activityFileAnswer.component.scss
@@ -72,3 +72,8 @@ $drop-block-active-color: lightyellow;
     margin: 10px;
     float: right;
 }
+
+.loading-bar {
+    display: block;
+    margin: 10px 0;
+}
