Rename output emitter for activitySection.component

--- a/ddp-workspace/projects/ddp-circadia/src/app/components/activity/activity.component.html
+++ b/ddp-workspace/projects/ddp-circadia/src/app/components/activity/activity.component.html
@@ -63,7 +63,7 @@
         (embeddedComponentsValidationStatus)="
           updateEmbeddedComponentValidationStatus(0, $event)
         "
-        (embeddedComponentBusy)="embeddedComponentBusy$[0].next($event)"
+        (componentBusy)="embeddedComponentBusy$[0].next($event)"
       >
       </ddp-activity-section>
     </section>
@@ -79,7 +79,7 @@
         (embeddedComponentsValidationStatus)="
           updateEmbeddedComponentValidationStatus(1, $event)
         "
-        (embeddedComponentBusy)="embeddedComponentBusy$[1].next($event)"
+        (componentBusy)="embeddedComponentBusy$[1].next($event)"
       >
       </ddp-activity-section>
     </section>
@@ -95,7 +95,7 @@
         (embeddedComponentsValidationStatus)="
           updateEmbeddedComponentValidationStatus(2, $event)
         "
-        (embeddedComponentBusy)="embeddedComponentBusy$[2].next($event)"
+        (componentBusy)="embeddedComponentBusy$[2].next($event)"
       >
       </ddp-activity-section>
     </section>
