--- a/ddp-workspace/projects/ddp-rarex/src/app/components/activity/activity.component.html
+++ b/ddp-workspace/projects/ddp-rarex/src/app/components/activity/activity.component.html
@@ -30,7 +30,7 @@
             (embeddedComponentsValidationStatus)="
               updateEmbeddedComponentValidationStatus(0, $event)
             "
-            (embeddedComponentBusy)="embeddedComponentBusy$[0].next($event)"
+            (componentBusy)="embeddedComponentBusy$[0].next($event)"
           ></ddp-activity-section>
         </ng-container>
       </div>
@@ -74,7 +74,7 @@
             (embeddedComponentsValidationStatus)="
               updateEmbeddedComponentValidationStatus(1, $event)
             "
-            (embeddedComponentBusy)="embeddedComponentBusy$[1].next($event)"
+            (componentBusy)="embeddedComponentBusy$[1].next($event)"
           ></ddp-activity-section>
         </div>
       </div>
@@ -92,7 +92,7 @@
               (embeddedComponentsValidationStatus)="
                 updateEmbeddedComponentValidationStatus(2, $event)
               "
-              (embeddedComponentBusy)="embeddedComponentBusy$[2].next($event)"
+              (componentBusy)="embeddedComponentBusy$[2].next($event)"
             ></ddp-activity-section>
           </ng-container>
 
