--- a/ddp-workspace/projects/ddp-osteo/src/app/components/header/header.component.scss
+++ b/ddp-workspace/projects/ddp-osteo/src/app/components/header/header.component.scss
@@ -291,7 +291,7 @@
 
 @media only screen and (max-width: 480px) {
     .header-content {
-        padding: 0px 5px;
+        padding: 0 5px;
     }
 }
 
